--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "express": "^4.17.1",
     "firebase-tools": "^7.11.0",
     "http-errors": "^1.7.3",
-    "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "pug": "^2.0.4"
-  }
+    "nodemon": "^2.0.2"
+  },
+  "devDependencies": {}
 }
