--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "~1.4.4",
     "debu": "0.0.1-security",
     "debug": "^4.1.1",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "firebase-tools": "^7.11.0",
     "http-errors": "^1.7.3",
