--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "^4.1.1",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "firebase": "^7.7.0",
     "firebase-tools": "^7.11.0",
     "http-errors": "^1.7.3",
     "morgan": "~1.9.1",
